Fixed z-index on top gray header bar

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -52,6 +52,7 @@ body {
   align-items: none;
   flex-direction: row;
   position: fixed;
+  z-index: 9;
   height: 44px;
   background-color: #333;
 }
