--- a/components/Carousel/Carousel.less
+++ b/components/Carousel/Carousel.less
@@ -1,6 +1,7 @@
 .carousel {
   .width-100();
   .flex(center, center);
+  z-index: 1;
   height: 500px;
   position: relative;
   overflow: hidden;
